[package]
authors = ["Patrick Schneider <s.patrick.2001@web.de>"]
edition = "2021"
name = "kifapwa"
version = "0.1.0"

[dependencies]
wasm-bindgen = "0.2.78"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile]
[profile.release]
opt-level = "s"
