[package]
authors = ["Patrick Schneider <s.patrick.2001@web.de>"]
edition = "2021"
name = "kifapwa"
version = "0.1.0"

[dependencies]
wasm-bindgen = "0.2.78"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.wee_alloc]
optional = true
version = "0.4.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Window",
  "Storage",
  "Location"
]

[dependencies.oauth2]
features = ["reqwest"]
version = "4.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile]
[profile.release]
opt-level = "s"
